@@ -2,5 +2,5 @@
 
 INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
 noinst_LIBRARIES=libphpext_sybase.a
-libphpext_sybase_a_SOURCES=sybase.c sybase-ct.c
+libphpext_sybase_a_SOURCES=sybase.c
 
