@@ -1,0 +1,6 @@
+# $Id$
+
+INCLUDES=@INCLUDES@ -I@top_srcdir@ -I@top_srcdir@/libzend
+noinst_LIBRARIES=libphpext_sybase_ct.a
+libphpext_sybase_ct_a_SOURCES=php_sybase_ct.c
+
